<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/bDQ" android:icon="@drawable/baseline_class_24" android:title="@string/design_qualification"/>
    <item android:id="@+id/bIQ" android:icon="@drawable/baseline_class_24" android:title="@string/installation_qualification"/>
    <item android:id="@+id/bOQ" android:icon="@drawable/baseline_class_24" android:title="@string/operational_qualification"/>
    <item android:id="@+id/bHelp" android:icon="@drawable/baseline_help_outline_24" android:title="@string/help" />
    <item android:id="@+id/bPlayVideo" android:icon="@drawable/baseline_play_circle_outline_24" android:title="@string/play_video" />
    <item android:id="@+id/bVideoCall" android:icon="@drawable/baseline_videocam_24" android:title="@string/video_call"/>
    <item android:id="@+id/bTheme" android:icon="@drawable/baseline_palette_24" android:title="@string/change_theme"/>

</menu>