<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/bScanner" android:icon="@drawable/baseline_qr_code_24" android:title="@string/qr_scanner"/>
    <item android:id="@+id/bTracker" android:icon="@drawable/baseline_search_24" android:title="@string/live_tracking"/>
    <item android:id="@+id/bHelp" android:icon="@drawable/baseline_help_outline_24" android:title="@string/help" />
    <item android:id="@+id/bPlayVideo" android:icon="@drawable/baseline_play_circle_outline_24" android:title="@string/play_video" />
    <item android:id="@+id/bVideoCall" android:icon="@drawable/baseline_videocam_24" android:title="@string/video_call"/>
    <item android:id="@+id/bTheme" android:icon="@drawable/baseline_palette_24" android:title="@string/change_theme"/>

</menu>